plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.11'
    id 'io.spring.dependency-management' version '1.1.4'
    id("com.netflix.dgs.codegen") version "8.3.0"

}

group = 'com.demo.portfolio'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

ext {
    set('netflixDgsVersion', "10.5.0")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation "com.netflix.graphql.dgs:graphql-dgs-reactive:${netflixDgsVersion}"
    runtimeOnly "com.netflix.graphql.dgs:graphql-dgs-spring-graphql-starter:${netflixDgsVersion}"
    implementation "com.netflix.graphql.dgs:graphql-dgs-extended-scalars:${netflixDgsVersion}"
    implementation "com.netflix.graphql.dgs:graphql-dgs:${netflixDgsVersion}"
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    implementation 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

generateJava {
    schemaPaths = ["${projectDir}/src/main/resources/schema"]
    packageName = 'com.demo.portfolio.api.generated'
    generateClient = true
}
